# GoIT_21_12

dz11/: main.py  pyproject.toml
dz11/src/conf/: config.py
dz11/src/database/: models.py
dz11/src/repository/: todos.py  user.py
dz11/src/routes/: auth.py  contacts.py  todos.py
dz11/src/schemas/: contacts.py  user.py
dz11/src/services/: auth.py  roles.py
dz11/src/z_entity/: models.py
